testec/src/testec/MyNewGrammar.java
/* MyNewGrammar.java */
/* Generated By:JavaCC: Do not edit this line. MyNewGrammar.java */
package testec;
import java.util.*;
import java.io.*;
public class MyNewGrammar implements MyNewGrammarConstants {
    public static void main(String args []) throws ParseException, IOException, Exception
  {
    MyNewGrammar parser = new MyNewGrammar(new FileInputStream("exe4.txt"));
    try
    {
      MyNewGrammar.start();
    }
    catch (ParseException e)
    {
      System.out.println("Nao foi possivel compilar. " + e);
    }
  }

  static final public int start() throws ParseException, Exception {
    label_1:
    while (true) {
      Programa();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 55:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
System.out.print("O codigo fornecido em C foi compilado. \n");
    {if ("" != null) return 0;}
    throw new Error("Missing return statement in function");
}

  static final public void Programa() throws ParseException, Exception {
    jj_consume_token(55);
    label_2:
    while (true) {
      DefinicaoFuncao();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case VOID:
      case CHAR:
      case INT:
      case FLOAT:
      case DOUBLE:
      case IF:
      case WHILE:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case PRINT:
      case SCAN:
      case IDENTIFICADOR:
      case AC:
      case AP:
      case PV:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
}

  static final public void DefinicaoFuncao() throws ParseException, Exception {Token t = null;
    if (jj_2_1(2147483647)) {
      ListaDeclaracao();
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IF:
    case WHILE:
    case FOR:
    case CONTINUE:
    case BREAK:
    case RETURN:
    case PRINT:
    case SCAN:
    case IDENTIFICADOR:
    case AC:
    case AP:
    case PV:
    case INCREMENTO:
    case DECREMENTO:
    case SOMA:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case DIVISAO:
    case 56:
    case 67:
    case 68:{
      ListaDeclaracoes();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }

    EspecificadoresdeTipo();
    t = jj_consume_token(IDENTIFICADOR);

    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:
    case CHAR:
    case INT:
    case FLOAT:
    case DOUBLE:{
      ListaTiposParametros();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(FP);

    CorpoFuncao();

}

  static final public void ListaTiposParametros() throws ParseException {
    ListadeParametros();

}

  static final public void ListadeParametros() throws ParseException {
    DeclaracaoParametro();
    label_3:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(VIRGULA);
      DeclaracaoParametro();
    }

}

  static final public void DeclaracaoParametro() throws ParseException {
    EspecificadoresdeTipo();
    VariavelParam();

}

  static final public void CorpoFuncao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AC:{
      jj_consume_token(AC);
      if (jj_2_3(2147483647)) {
        ListaDeclaracao();
      } else {
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IF:
      case WHILE:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case PRINT:
      case SCAN:
      case IDENTIFICADOR:
      case AC:
      case AP:
      case PV:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ListaDeclaracoes();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(FC);
      break;
      }
    case PV:{
      jj_consume_token(PV);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void ListaDeclaracoes() throws ParseException {
    label_4:
    while (true) {
      DeclaracaoTipo();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IF:
      case WHILE:
      case FOR:
      case CONTINUE:
      case BREAK:
      case RETURN:
      case PRINT:
      case SCAN:
      case IDENTIFICADOR:
      case AC:
      case AP:
      case PV:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
    }

}

  static final public void DeclaracaoTipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case PRINT:
    case SCAN:
    case IDENTIFICADOR:
    case AP:
    case PV:
    case INCREMENTO:
    case DECREMENTO:
    case SOMA:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case DIVISAO:
    case 56:
    case 67:
    case 68:{
      DeclaracaoExpressao();
      break;
      }
    case AC:{
      CorpoFuncao();
      break;
      }
    case IF:{
      DeclaracaoCondicional();
      break;
      }
    case WHILE:
    case FOR:{
      DeclaracaoIteracao();
      break;
      }
    case CONTINUE:
    case BREAK:
    case RETURN:{
      DeclaracaoDesvio();
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void DeclaracaoCondicional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(AP);
    Expressao();
    jj_consume_token(FP);

    DeclaracaoTipo();

    if (jj_2_4(2)) {
      jj_consume_token(ELSE);
      DeclaracaoTipo();
    } else {
      ;
    }


}

  static final public void DeclaracaoIteracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(AP);
      Expressao();
      jj_consume_token(FP);

      DeclaracaoTipo();

      break;
      }
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(AP);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(PV);

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }

      jj_consume_token(PV);

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(FP);

      DeclaracaoTipo();

      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void DeclaracaoDesvio() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CONTINUE:{
      jj_consume_token(CONTINUE);
      jj_consume_token(PV);

      break;
      }
    case BREAK:{
      jj_consume_token(BREAK);
      jj_consume_token(PV);

      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(PV);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void ListaDeclaracao() throws ParseException {
    label_5:
    while (true) {
      EspecificadoresDeclaracao();
      if (jj_2_5(2)) {
        ;
      } else {
        break label_5;
      }
    }
}

  static final public void EspecificadoresDeclaracao() throws ParseException {
    DeclaracaoEspecificadores();
    ListaDeclaradoresInicializacao();
    jj_consume_token(PV);

}

  static final public void DeclaracaoEspecificadores() throws ParseException {
    EspecificadoresdeTipo();
    if (jj_2_6(2147483647)) {
      DeclaracaoEspecificadores();
    } else {
      ;
    }

}

  static final public void EspecificadoresdeTipo() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VOID:{
      t = jj_consume_token(VOID);
      break;
      }
    case CHAR:{
      t = jj_consume_token(CHAR);
      break;
      }
    case INT:{
      t = jj_consume_token(INT);
      break;
      }
    case FLOAT:{
      t = jj_consume_token(FLOAT);
      break;
      }
    case DOUBLE:{
      t = jj_consume_token(DOUBLE);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void ListaDeclaradoresInicializacao() throws ParseException {
    DeclaradorInit();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      jj_consume_token(VIRGULA);
      DeclaradorInit();

    }
}

  static final public void DeclaradorInit() throws ParseException {Token t = null;
    VariavelParam();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
      Inicializador();

      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }

}

  static final public void VariavelParam() throws ParseException {
    DeclaracaoDireta();

}

  static final public void DeclaracaoDireta() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      t = jj_consume_token(IDENTIFICADOR);
      break;
      }
    case AP:{
      jj_consume_token(AP);
      VariavelParam();
      jj_consume_token(FP);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void ListaInicializadores() throws ParseException {
    Inicializador();
    label_7:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(VIRGULA);
      Inicializador();
    }

}

  static final public void Inicializador() throws ParseException {
    ExpressaoAtribuicao();

}

  static final public void ExpressaoConstante() throws ParseException {
    ExpressaoCondicional();

}

  static final public void DeclaracaoExpressao() throws ParseException {Token t = null;
    if (jj_2_8(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(PV);
    } else if (jj_2_9(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PRINT:{
        jj_consume_token(PRINT);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(AP);
      StringFormatada();
      jj_consume_token(FP);
      jj_consume_token(PV);
    } else if (jj_2_10(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SCAN:{
        jj_consume_token(SCAN);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(AP);
      jj_consume_token(STRING_LITERAL);
      jj_consume_token(VIRGULA);
      jj_consume_token(56);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(FP);
      jj_consume_token(PV);
    } else if (jj_2_11(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        ChamadaFuncao();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      jj_consume_token(PV);
    } else if (jj_2_12(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      jj_consume_token(AP);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ListaArgumentos();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(FP);
      jj_consume_token(PV);
    } else if (jj_2_13(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      jj_consume_token(AP);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ListaArgumentos();
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(FP);
    } else if (jj_2_14(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        Expressao();
        jj_consume_token(AP);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOAT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case IDENTIFICADOR:
        case AP:
        case INCREMENTO:
        case DECREMENTO:
        case SOMA:
        case SUBTRACAO:
        case MULTIPLICACAO:
        case DIVISAO:
        case 56:
        case 67:
        case 68:{
          ListaArgumentos();
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          ;
        }
        jj_consume_token(FP);
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      jj_consume_token(PV);

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }

}

  static final public void ChamadaFuncao() throws ParseException {Token t;
    t = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(AP);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOAT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case IDENTIFICADOR:
    case AP:
    case INCREMENTO:
    case DECREMENTO:
    case SOMA:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case DIVISAO:
    case 56:
    case 67:
    case 68:{
      ListaArgumentos();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    jj_consume_token(FP);

}

  static final public void StringFormatada() throws ParseException {
    jj_consume_token(STRING_LITERAL);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        break label_8;
      }
      jj_consume_token(VIRGULA);
      Expressao();
    }

}

  static final public void ListaArgumentos() throws ParseException {
    Expressao();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        break label_9;
      }
      jj_consume_token(VIRGULA);
      Expressao();
    }

}

  static final public void Expressao() throws ParseException {
    ExpressaoAtribuicao();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_10;
      }
      jj_consume_token(VIRGULA);
      ExpressaoAtribuicao();
    }

}

  static final public void ExpressaoAtribuicao() throws ParseException {
    if (jj_2_15(2147483647)) {
      ExpressaoUnaria();
      OperadorAtribuicao();

      ExpressaoAtribuicao();

    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOAT_LITERAL:
      case CHARACTER_LITERAL:
      case STRING_LITERAL:
      case IDENTIFICADOR:
      case AP:
      case INCREMENTO:
      case DECREMENTO:
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case 56:
      case 67:
      case 68:{
        ExpressaoCondicional();
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

}
